# SkullKI

./: .gitattributes  .gitignore  CMakeLists.txt  COMMANDS.md  README.md  cfr_config.yaml  cfr_config_h100.yaml  cfr_config_overnight_pc.yaml  cfr_config_pc.yaml  cfr_config_rebel_4090.yaml  cfr_config_server.yaml  cfr_config_v4_pc.yaml  cfr_config_v4_server.yaml  cfr_config_v7_4090.yaml  cfr_config_v7_5090.yaml  cfr_config_v7_splitnet.yaml  diag_rebel.py  diagnose_cfr.py  eval_cfr_run.py  nfsp_config.yaml  nfsp_config_server.yaml  pyproject.toml  requirements.txt  rules.txt  server_config.yaml  setup_runpod.sh  setup_vast_4090.sh  setup_vast_v8_4090.sh  setup_vast_v8_6000.sh  training_config.yaml
agents/: CMakeLists.txt
agents/include/sk/: agent.hpp  heuristic_agent.hpp  random_agent.hpp
agents/src/: heuristic_agent.cpp  random_agent.cpp
agents/tests/: CMakeLists.txt  test_agents.cpp
bindings/: CMakeLists.txt  demo.py  pyengine.cpp
configs/alphazero/: alphazero_v1.yaml
configs/cfr/: v8_4090.yaml  v8_6000.yaml
configs/douzero/: douzero_v1.yaml
configs/nfsp/: nfsp_v1.yaml  nfsp_v2.yaml
configs/rebel/: rebel_v1.yaml
docker/: Dockerfile  README.md
docs/: rules_spec.md
engine/: CMakeLists.txt
engine/include/sk/: action.hpp  action_index.hpp  card_set.hpp  cards.hpp  encoder.hpp  game.hpp  observation.hpp  rules.hpp  scoring.hpp  state.hpp
engine/src/: encoder.cpp  game.cpp  observation.cpp  rules.cpp  scoring.cpp
engine/tests/: CMakeLists.txt  test_action_index.cpp  test_cards.cpp  test_fuzz.cpp  test_game.cpp  test_observation.cpp  test_rules.cpp  test_scoring.cpp
models/skull_king/cfr_v7_best/: cfr_v7_4090_iter1500_bid_adv.pt  cfr_v7_4090_iter1500_bid_strat.pt  cfr_v7_4090_iter1500_play_adv.pt  cfr_v7_4090_iter1500_play_strat.pt  cfr_v8_6000_iter500_bid_adv.pt  cfr_v8_6000_iter500_bid_strat.pt  cfr_v8_6000_iter500_play_adv.pt  cfr_v8_6000_iter500_play_strat.pt
nn_torch/: CMakeLists.txt
nn_torch/include/sk/: async_batch_evaluator.hpp  belief_model.hpp  evaluator.hpp  neural_mcts.hpp  torch_model.hpp  torch_nn_agent.hpp
nn_torch/src/: async_batch_evaluator.cpp  belief_model.cpp  neural_mcts.cpp  torch_model.cpp  torch_nn_agent.cpp
scripts/: benchmark_gpu.py  benchmark_traversal.py  diag_server.py  diagnose_bidding.py  eval_cfr_run.py  setup_vast_rebel.sh  setup_vast_v8_4090.sh  setup_vast_v8_6000.sh  vastai_setup.sh
search/: CMakeLists.txt
search/include/sk/: determinize.hpp  ismcts.hpp
search/src/: determinize.cpp  ismcts.cpp
search/tests/: CMakeLists.txt  test_determinize.cpp  test_ismcts.cpp
skull_king/: __init__.py  calculator.py  cards.py  cfr_engine.py  engine.py  game_state.py  player.py  resolver.py  scoring.py  trick.py
skull_king/_core/: __init__.py  setup.py  setup_engine.py  skull_king_core.c  skull_king_engine.c
skull_king/agents/: __init__.py  base_agent.py  heuristic_agent.py  mcts_agent.py  random_agent.py
skull_king/analysis/: cli.py  explorer.py  tables.py
skull_king/env/: __init__.py  skull_king_env.py
skull_king/tournament/: __init__.py  plots.py  runner.py
skull_king/training/: __init__.py  analyze.py  callbacks.py  nfsp_callbacks.py  nfsp_env.py  nfsp_reservoir.py  nfsp_sl.py  nfsp_train.py  self_play_env.py  train.py
skull_king/training/alphazero/: __init__.py  _profile.py  agent.py  buffers.py  mcts.py  networks.py  runner.py  train.py  trainer.py
skull_king/training/cfr/: agent.py  buffers.py  networks.py  train.py  trainer.py  traversal.py
skull_king/training/douzero/: __init__.py  agent.py  buffers.py  networks.py  opponents.py  runner.py  train.py  trainer.py
skull_king/training/nfsp/: agent.py  buffers.py  networks.py  runner.py  train.py  trainer.py
skull_king/training/rebel/: __init__.py  agent.py  buffers.py  networks.py  public_belief_state.py  subgame.py  train.py  trainer.py
skull_king/web/: __init__.py  app.py
skull_king/web/static/: index.html
tests/: test_agents.py  test_calculator.py  test_cards.py  test_engine.py  test_env.py  test_game_state.py  test_player.py  test_resolver.py  test_scoring.py  test_tournament.py  test_training.py  test_trick.py
tools/: CMakeLists.txt  benchmark_async.cpp  benchmark_nn.cpp  selfplay_az.cpp  tournament.cpp
train/: alphazero_loop.py  belief_model.py  data_gen.py  eval.py  export.py  export_belief.py  load_skaz.py  model.py  nn_agent.py  selfplay.py  selfplay_az_multi.py  train.py  train_belief.py
