[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skull-king"
version = "0.1.0"
description = "Skull King card game engine for reinforcement learning research"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "pettingzoo>=1.24",
    "numpy>=1.24",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
